@@ -36,6 +36,8 @@ Rescanning sometimes causes the display to scroll (automounter problem).
 
 Panel sometimes won't accept drops (window frame problem?).
 
+Deleting / moving files should update the globicons.
+
 
 FEATURES FOR 1.1
 
