@@ -142,12 +142,6 @@ operation, such as copying or deleting some files.</label>
     <toggle name='unique_windows' label='Unique windows'>If you open a directory and that directory is already displayed in another window, then this option causes the other window to be closed.</toggle>
     <toggle name='beep_fail' label='Beep if Tab-completion fails'>When using the `Enter Path...' minibuffer and Tab is pressed, beep if nothing happens (eg, because there are several possibilities and the next letter varies).</toggle>
     <toggle name='beep_multi' label='Beep if there are several matches'>When using the `Enter Path...' minibuffer and Tab is pressed, beep if there is more than one matching file, even though some more letters were added.</toggle>
-    <menu name='default_minibuffer' label='Default minibuffer'>
-      <item label='None' value='0'/>
-      <item label='Goto' value='1'/>
-      <item label='Shell' value='2'/>
-      <item label='Select If' value='3'/>
-    </menu>
 </section>
   <section name='dnd' title='Drag and Drop'>
     <toggle name='no_hostnames' label="Don't use hostnames">Some older applications don't support XDND fully and may need to have this option turned on. Use this if dragging files to an application shows a + sign on the pointer but the drop doesn't work.</toggle>
