@@ -2,6 +2,14 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+12-Dec-2001
+~~~~~~~~~~~
+Clicking on an item which is selected, but not part of the primary selection,
+now reclaims the selection.
+Removed default minibuffer option for now.
+The dash forms in Find tests can be combined, eg '-rwx'.
+Updated manual.
+
 11-Dec-2001
 ~~~~~~~~~~~
 Additional window hints - pinboard and panels refuse focus and pinboard
